# IMU-Preintegration

./: .gitignore  CMakeLists.txt  README.md  package.xml
Examples/: parameter.yaml  robot_odo_stereo.launch  ros_stereo_odo.cc  ros_stereo_odo_serial.cc
cmake/: OpenCV.cmake  global_defination.cmake  pangolin.cmake
include/: ImageFrame.h  ImuTypes.h  IntegrationBase.h  RotUtil.h  Timestamp.h  global_defination.h.in  imuProcess.h  parameters.h  zupt.h
src/: ImageFrame.cpp  ImuTypes.cc  IntegrationBase.cpp  RotUtil.cpp  Timestamp.cpp  imuProcess.cpp  parameters.cpp  zupt.cpp
